--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="./assets/brands/Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Party Carts &amp; Events - The Little Baker Kitchen</title>
+    <title>Blog - The Little Baker Kitchen</title>
     <script>
         (function() {
 
@@ -126,184 +126,15 @@
                 </svg>Auto</a></div>
     </div>
     <section class="py-5">
-        <div class="container py-4 py-xl-5">
-            <div class="row">
-                <div class="col-md-10 col-xl-10 text-center mx-auto">
-                    <h1 style="font-family: Lobster, serif;">Party Carts &amp; Events</h1>
-                    <p class="w-lg-50">Explore our delicious pastries. From classics to unique treats, find the perfect indulgence for any occasion. At The Little Baker Kitchen, we also specialize in customizing pastries to suit your preferences and special requests, simply send us a message! Enjoy happiness, one pastry at a time.</p>
+        <div class="container py-5">
+            <div class="row mb-4 mb-lg-5">
+                <div class="col-md-8 col-xl-6 text-center mx-auto">
+                    <h1 class="fw-bold" style="font-family: Lobster, serif;">Wowie title here</h1>
                 </div>
-                <div class="col-lg-4 offset-lg-4 text-center"><a class="btn btn-outline-secondary" role="button" href="https://thelittlebakerkitchen.cococart.co" target="_blank">Order Here!</a></div>
-            </div>
-            <div class="row py-3">
-                <div class="col-sm-6 col-md-5 col-lg-3 offset-sm-1 offset-md-2 offset-lg-0 text-center">
-                    <h3 style="font-family: Lobster, serif;">Filter Category:</h3>
-                </div>
-                <div class="col-sm-4 col-md-3 col-lg-2 text-center">
-                    <div class="dropdown"><button class="btn btn-primary btn-sm dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="outside" type="button">Categories</button>
-                        <div class="dropdown-menu dropdown-menu-dark"><a class="dropdown-item" href="#">Father’s Day Gift Sets</a><a class="dropdown-item" href="#">Christmas Gift Sets</a><a class="dropdown-item" href="#">Cake Trays and Tubs</a></div>
-                    </div>
+                <div class="col-md-10 col-lg-12 offset-md-1 offset-lg-0">
+                    <p style="text-align: justify;"><br>We’re thrilled to bring our delightful cakes, pastries, and event services to customers across Metro Manila. Whether you need a stunning cake, delicious pastries, or a fun party cart for your event, we’re here to make the process smooth and stress-free.<br><br>To help you, we’ve compiled a list of frequently asked questions (FAQs). If you have any other questions, feel free to contact us. We look forward to turning your vision into a memorable celebration!</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <h1 class="text-center" style="font-family: Lobster, serif;padding-bottom: 0px;margin-bottom: 26px;">Father’s Day Gift Sets</h1>
-                </div>
-            </div>
-            <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal1" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial1.jpg" width="330" height="400"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Box of 6 Chunkies</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal2" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial2.jpg" width="330" height="400"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Nori Gift Box</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal3" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial3.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Christmas Set</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal4" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial4.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Pistachio Sansrival</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal5" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial5.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Triple Chocolate Mousse</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal6" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial6.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Test 34</h6>
-                        </div>
-                    </div>
-                </div>
-            </div><div>
-    <div id="pictureModal1" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button class="btn-close" aria-label="Close" data-bs-dismiss="modal" type="button"></button></div>
-                <div class="modal-body"><img class="img-fluid" alt="Picture" src="assets/img/products/Testimonial1.jpg" /></div>
-            </div>
-        </div>
-    </div>
-    <div id="pictureModal2" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button class="btn-close" aria-label="Close" data-bs-dismiss="modal" type="button"></button></div>
-                <div class="modal-body"><img class="img-fluid" alt="Picture" src="assets/img/products/Testimonial2.jpg" /></div>
-            </div>
-        </div>
-    </div>
-    <div id="pictureModal3" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button class="btn-close" aria-label="Close" data-bs-dismiss="modal" type="button"></button></div>
-                <div class="modal-body"><img class="img-fluid" alt="Picture" src="assets/img/products/Testimonial3.jpg" /></div>
-            </div>
-        </div>
-    </div>
-    <div id="pictureModal4" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button class="btn-close" aria-label="Close" data-bs-dismiss="modal" type="button"></button></div>
-                <div class="modal-body"><img class="img-fluid" alt="Picture" src="assets/img/products/Testimonial4.jpg" /></div>
-            </div>
-        </div>
-    </div>
-    <div id="pictureModal5" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button class="btn-close" aria-label="Close" data-bs-dismiss="modal" type="button"></button></div>
-                <div class="modal-body"><img class="img-fluid" alt="Picture" src="assets/img/products/Testimonial5.jpg" /></div>
-            </div>
-        </div>
-    </div>
-    <div id="pictureModal6" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button class="btn-close" aria-label="Close" data-bs-dismiss="modal" type="button"></button></div>
-                <div class="modal-body"><img class="img-fluid" alt="Picture" src="assets/img/products/Testimonial6.jpg" /></div>
-            </div>
-        </div>
-    </div>
-</div>
-            <div class="row">
-                <div class="col">
-                    <h1 class="text-center" style="font-family: Lobster, serif;padding-bottom: 0px;margin-bottom: 26px;">Christmas Gift Sets</h1>
-                </div>
-            </div>
-            <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal1" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial1.jpg" width="330" height="400"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Box of 6 Chunkies</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal2" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial2.jpg" width="330" height="400"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Nori Gift Box</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal3" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial3.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Christmas Set</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal4" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial4.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Pistachio Sansrival</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal5" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial5.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Triple Chocolate Mousse</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal6" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial6.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Test 34</h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="d-flex justify-content-center">
-            <nav class="text-secondary">
-                <ul class="pagination">
-                    <li class="page-item"><a class="page-link" aria-label="Previous" href="#"><span aria-hidden="true" style="color: var(--bs-body-color);">«</span></a></li>
-                    <li class="page-item" style="color: var(--bs-body-color);"><a class="page-link" href="#" style="color: var(--bs-body-color);">1</a></li>
-                    <li class="page-item" style="color: var(--bs-body-color);"><a class="page-link" href="#" style="color: var(--bs-body-color);">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#" style="color: var(--bs-body-color);">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#" style="color: var(--bs-body-color);">4</a></li>
-                    <li class="page-item"><a class="page-link" href="#" style="color: var(--bs-body-color);">5</a></li>
-                    <li class="page-item"><a class="page-link" aria-label="Next" href="#"><span aria-hidden="true" style="color: var(--bs-body-color);">»</span></a></li>
-                </ul>
-            </nav>
         </div>
     </section>
     <footer class="bg-primary-gradient">
