--- a/customorders.html
+++ b/customorders.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-<link rel="icon" type="image/x-icon" href="./../../../Transparent Logo.png">
+<link rel="icon" type="image/x-icon" href="./assets/brands/Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Custom Cakes - The Little Baker Kitchen</title>
     <script>
@@ -101,7 +101,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav">
+    <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav" data-bs-theme="dark">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><img src="assets/img/brands/Hat.png" width="40" height="40"></span><span style="padding-left: 0px;margin-left: 5px;font-family: 'Chelsea Market', serif;color: rgb(255,255,255);">TLB Kitchen</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
@@ -146,7 +146,7 @@
             </div>
             <div class="row" style="margin-bottom: 23px;">
                 <div class="col-lg-10 offset-lg-1">
-                    <div class="input-group"><span class="input-group-text">Find Products</span><input class="form-control" type="text"><button class="btn btn-primary" type="button">Search</button></div>
+                    <div class="input-group input-group-sm"><span class="input-group-text">Find Products</span><input class="form-control" type="text" placeholder="Start typing here..."><button class="btn btn-primary" type="button">Search</button></div>
                 </div>
             </div>
             <div class="row">
@@ -156,48 +156,50 @@
             </div>
             <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
                 <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal1" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial1.jpg" width="330" height="400"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Box of 6 Chunkies</h6>
-                        </div>
-                    </div>
+                    <div class="text-center"><a href="#" data-bs-target="#pictureModal1" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial1.jpg" width="330" height="400"></a></div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal2" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial2.jpg" width="330" height="400"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Nori Gift Box</h6>
-                        </div>
-                    </div>
+                    <div class="text-center"><a href="#" data-bs-target="#pictureModal2" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial2.jpg" width="330" height="400"></a></div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal3" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial3.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Christmas Set</h6>
-                        </div>
-                    </div>
+                    <div class="text-center"><a href="#" data-bs-target="#pictureModal3" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial3.jpg"></a></div>
                 </div>
                 <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal4" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial4.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Pistachio Sansrival</h6>
-                        </div>
-                    </div>
+                    <div class="text-center"><a href="#" data-bs-target="#pictureModal4" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial4.jpg"></a></div>
                 </div>
                 <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal5" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial5.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Triple Chocolate Mousse</h6>
-                        </div>
-                    </div>
+                    <div class="text-center"><a href="#" data-bs-target="#pictureModal5" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial5.jpg"></a></div>
                 </div>
                 <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal6" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial6.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Test 34</h6>
-                        </div>
-                    </div>
+                    <div class="text-center"><a href="#" data-bs-target="#pictureModal6" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial6.jpg"></a></div>
                 </div>
-            </div><div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <h1 class="text-center" style="font-family: Lobster, serif;padding-bottom: 0px;margin-bottom: 26px;margin-top: 18px;">Christmas Gift Sets</h1>
+                </div>
+            </div>
+            <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
+                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="text-center"><a href="#" data-bs-target="#pictureModal1" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial1.jpg" width="330" height="400"></a></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="text-center"><a href="#" data-bs-target="#pictureModal2" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial2.jpg" width="330" height="400"></a></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="text-center"><a href="#" data-bs-target="#pictureModal3" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial3.jpg"></a></div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="text-center"><a href="#" data-bs-target="#pictureModal4" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial4.jpg"></a></div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="text-center"><a href="#" data-bs-target="#pictureModal5" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial5.jpg"></a></div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="text-center"><a href="#" data-bs-target="#pictureModal6" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial6.jpg"></a></div>
+                </div>
+            </div>
+        </div><div>
     <div id="pictureModal1" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -247,56 +249,6 @@
         </div>
     </div>
 </div>
-            <div class="row">
-                <div class="col">
-                    <h1 class="text-center" style="font-family: Lobster, serif;padding-bottom: 0px;margin-bottom: 26px;">Christmas Gift Sets</h1>
-                </div>
-            </div>
-            <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal1" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial1.jpg" width="330" height="400"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Box of 6 Chunkies</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal2" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial2.jpg" width="330" height="400"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Nori Gift Box</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal3" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial3.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Christmas Set</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal4" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial4.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Pistachio Sansrival</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal5" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial5.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Triple Chocolate Mousse</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal6" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial6.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Test 34</h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="d-flex justify-content-center">
             <nav class="text-secondary">
                 <ul class="pagination">
