--- a/blogs.html
+++ b/blogs.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-<link rel="icon" type="image/x-icon" href="./../../../Transparent Logo.png">
+<link rel="icon" type="image/x-icon" href="./assets/brands/Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Blogs - The Little Baker Kitchen</title>
     <script>
@@ -101,7 +101,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav">
+    <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav" data-bs-theme="dark">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><img src="assets/img/brands/Hat.png" width="40" height="40"></span><span style="padding-left: 0px;margin-left: 5px;font-family: 'Chelsea Market', serif;color: rgb(255,255,255);">TLB Kitchen</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
@@ -113,6 +113,74 @@
             </div>
         </div>
     </nav>
+    <section class="clean-block clean-blog-list dark">
+        <div class="container">
+            <div class="block-heading" style="margin-top: 27px;">
+                <h1 class="display-4 text-center" style="font-family: Lobster, serif;">Blogs</h1>
+                <p style="text-align: justify;">Welcome to the sweetest corner of the internet, where we’re all about indulging in the latest and greatest cake trends. At CakeIndulge Manila, we’re passionate about exploring the exciting world of baking and decorating, and we’re thrilled to share our expertise with you.<br><br>Our team of cake enthusiasts is dedicated to bringing you the most mouth-watering recipes, innovative decorating techniques, and must-know tips for baking success. Whether you’re a frosting fanatic or a sponge cake specialist, you’ve come to the right place. Join us on a journey through the world of sweet treats and let’s satisfy our cake cravings together!</p>
+            </div>
+            <div class="row" style="margin-bottom: 23px;">
+                <div class="col-lg-10 offset-lg-1">
+                    <div class="input-group input-group-sm"><span class="input-group-text">Search by title</span><input class="form-control" type="text" placeholder="Start typing..."><button class="btn btn-primary" type="button">Search</button></div>
+                </div>
+            </div>
+            <div class="block-content">
+                <div class="clean-blog-post">
+                    <div class="row" style="padding-top: 0px;margin-top: 36px;">
+                        <div class="col-lg-5 col-xl-3 text-center"><img class="rounded img-fluid" src="assets/img/products/Custom%20Orders%202.jpg" style="height: 200px;"></div>
+                        <div class="col-lg-7 col-xl-9 text-center text-lg-start text-xl-start text-xxl-start align-self-center">
+                            <h3>Lorem Ipsum dolor sit amet</h3>
+                            <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p><button class="btn btn-primary" type="button">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="clean-blog-post">
+                    <div class="row" style="padding-top: 0px;margin-top: 30px;">
+                        <div class="col-lg-5 col-xl-3 text-center align-self-center"><img class="rounded img-fluid" src="assets/img/products/Custom_Orders_3.jpg" style="height: 200px;"></div>
+                        <div class="col-lg-7 col-xl-9 text-center text-lg-start text-xl-start text-xxl-start align-self-center">
+                            <h3>Lorem Ipsum dolor sit amet</h3>
+                            <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p><button class="btn btn-primary" type="button">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="clean-blog-post">
+                    <div class="row" style="margin-top: 30px;">
+                        <div class="col-lg-5 col-xl-3 text-center align-self-center"><img class="rounded img-fluid" src="assets/img/products/Home_Page_2.jpg" style="height: 200px;"></div>
+                        <div class="col-lg-7 col-xl-9 text-center text-lg-start text-xl-start text-xxl-start align-self-center">
+                            <h3>Lorem Ipsum dolor sit amet</h3>
+                            <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p><button class="btn btn-primary" type="button">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="clean-blog-post">
+                    <div class="row" style="margin-top: 30px;">
+                        <div class="col-lg-5 col-xl-3 text-center align-self-center"><img class="rounded img-fluid" src="assets/img/products/Testimonial12.jpg" width="150" height="200" style="height: 200px;"></div>
+                        <div class="col-lg-7 col-xl-9 text-center text-lg-start text-xl-start text-xxl-start align-self-center">
+                            <h3>Lorem Ipsum dolor sit amet</h3>
+                            <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p><button class="btn btn-primary" type="button">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center" style="margin-top: 20px;">
+            <nav class="text-secondary">
+                <ul class="pagination">
+                    <li class="page-item"><a class="page-link" aria-label="Previous" href="#"><span aria-hidden="true" style="color: var(--bs-body-color);">«</span></a></li>
+                    <li class="page-item" style="color: var(--bs-body-color);"><a class="page-link" href="#" style="color: var(--bs-body-color);">1</a></li>
+                    <li class="page-item" style="color: var(--bs-body-color);"><a class="page-link" href="#" style="color: var(--bs-body-color);">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#" style="color: var(--bs-body-color);">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#" style="color: var(--bs-body-color);">4</a></li>
+                    <li class="page-item"><a class="page-link" href="#" style="color: var(--bs-body-color);">5</a></li>
+                    <li class="page-item"><a class="page-link" aria-label="Next" href="#"><span aria-hidden="true" style="color: var(--bs-body-color);">»</span></a></li>
+                </ul>
+            </nav>
+        </div>
+    </section>
     <div class="theme-switcher dropup fixed-bottom" style="margin-bottom: 30px;text-align: right;"><button class="btn btn-link" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="color: var(--bs-body-color);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-sun-fill mb-1">
                 <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"></path>
             </svg></button>
