--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-<link rel="icon" type="image/x-icon" href="./../../../Transparent Logo.png">
+<link rel="icon" type="image/x-icon" href="./assets/brands/Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Contact Us - The Little Baker Kitchen</title>
     <script>
@@ -101,7 +101,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav">
+    <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav" data-bs-theme="dark">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><img src="assets/img/brands/Hat.png" width="40" height="40"></span><span style="padding-left: 0px;margin-left: 5px;font-family: 'Chelsea Market', serif;color: rgb(255,255,255);">TLB Kitchen</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
@@ -131,7 +131,7 @@
                 <div class="col-md-11 col-xl-6 text-center mx-auto">
                     <p class="fw-bold text-success mb-2">Contacts</p>
                     <h1 class="fw-bold" style="font-family: Lobster, serif;">Ready to Plan Your Event?</h1>
-                    <p class="my-3" style="color: var(--bs-primary-text-emphasis);">We're excited to help make your celebration extra special. Whether you're looking for custom cakes, delectable desserts, or planning a party, we've got you covered! Just send us a message on any of our social media accounts, viber, or email.</p>
+                    <p>We're excited to help make your celebration extra special. Whether you're looking for custom cakes, delectable desserts, or planning a party, we've got you covered! Just send us a message on any of our social media accounts, viber, or email.</p>
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
