--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 <body>
     <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav" data-bs-theme="dark">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><img src="assets/img/brands/Hat.png" width="40" height="40"></span><span style="padding-left: 0px;margin-left: 5px;font-family: 'Chelsea Market', serif;color: rgb(255,255,255);">TLB Kitchen</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1">
+            <div class="collapse navbar-collapse text-center" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link link-light active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link-light pricing-nav" href="specialties.html">Specialties</a></li>
-                    <li class="nav-item"><a class="nav-link link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="blogs.html"><span style="color: rgb(255, 255, 255);">Blogs</span></a></li>
+                    <li class="nav-item"><a class="nav-link text-center link-light active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-center link-light pricing-nav" href="specialties.html">Specialties</a></li>
+                    <li class="nav-item"><a class="nav-link text-center link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
+                    <li class="nav-item"><a class="nav-link text-center" href="blogs.html"><span style="color: rgb(255, 255, 255);">Blogs</span></a></li>
                 </ul><a class="btn btn-secondary link-light shadow" role="button" href="contactus.html">Contact Us</a>
             </div>
         </div>
